flask and db working

--- a/husapris.ipynb
+++ b/husapris.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1091,
+   "execution_count": 1108,
    "id": "4e2a16d3-08a3-479e-a580-bbb5ed4cb4ad",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1092,
+   "execution_count": 1124,
    "id": "5c04c16a-745f-4f08-a282-c34acdd17555",
    "metadata": {
     "editable": true,
@@ -125,13 +125,13 @@
     "        if self.imgs != \"None\":\n",
     "            return str(self.imgs)\n",
     "    def getName(self):\n",
-    "        if self.addresses != \"None\" and self.houseNums != \"None\":\n",
+    "        if self.addresses != None and self.houseNums != None and  self.cities != None:\n",
     "            return str(self.cities+_+self.addresses+self.houseNums)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1093,
+   "execution_count": 1125,
    "id": "726761f6-d73e-482e-94fd-541d65403571",
    "metadata": {
     "editable": true,
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1094,
+   "execution_count": 1126,
    "id": "109631fb-3c06-4982-9db8-ec9156c500ec",
    "metadata": {
     "editable": true,
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1095,
+   "execution_count": 1127,
    "id": "b6401455-0573-4f7b-9d80-34ac2fd438d4",
    "metadata": {},
    "outputs": [],
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1096,
+   "execution_count": 1128,
    "id": "332a03a4-a8da-431d-a523-220ba7fed9a4",
    "metadata": {},
    "outputs": [],
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1097,
+   "execution_count": 1129,
    "id": "a2799142-09e6-43c0-be7e-d258b724f577",
    "metadata": {},
    "outputs": [],
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1098,
+   "execution_count": 1130,
    "id": "57fe8a8c-1a6c-46ac-aca3-4fb2a31581e5",
    "metadata": {},
    "outputs": [],
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1099,
+   "execution_count": 1131,
    "id": "5b45f260-7897-401c-ab78-31c1ed07e8a2",
    "metadata": {},
    "outputs": [],
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1100,
+   "execution_count": 1132,
    "id": "eb086590-919c-44f5-9ff1-41d4a8fa8ed8",
    "metadata": {},
    "outputs": [],
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1101,
+   "execution_count": 1133,
    "id": "8c244913-5a8e-475b-b958-00d4cdd50aa4",
    "metadata": {
     "editable": true,
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1102,
+   "execution_count": 1134,
    "id": "ef673811-eb57-420d-b273-a4f640d19297",
    "metadata": {
     "editable": true,
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1103,
+   "execution_count": 1135,
    "id": "646f7426-257a-4650-89d4-ffc3e1327a5f",
    "metadata": {},
    "outputs": [],
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1104,
+   "execution_count": 1136,
    "id": "446ef0af-be4f-48e3-b7c6-f8114169c0f2",
    "metadata": {
     "editable": true,
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1105,
+   "execution_count": 1137,
    "id": "6b3302cc-0378-469f-99e3-e74f0105f6ff",
    "metadata": {
     "editable": true,
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1041,
+   "execution_count": 1138,
    "id": "262e96ac-78f4-4c9d-8f68-7baedc96deba",
    "metadata": {
     "editable": true,
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1106,
+   "execution_count": 1141,
    "id": "34ac462f-0d95-4002-9cd4-4be753948064",
    "metadata": {
     "editable": true,
@@ -669,19 +669,26 @@
       "Image saved as Leynarmatr.nr. 21f.jpeg\n",
       "Image saved as Skálamatr.nr. 240a.jpeg\n",
       "Image saved as KlaksvíkTraðagøta 37.jpeg\n",
-      "Image saved as ToftirÓlavsvegur 6.jpeg\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "can only concatenate str (not \"NoneType\") to str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1106], line 11\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m prop \u001b[38;5;129;01min\u001b[39;00m properties:\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;66;03m# URL of the image\u001b[39;00m\n\u001b[1;32m     10\u001b[0m     image_url \u001b[38;5;241m=\u001b[39m prop\u001b[38;5;241m.\u001b[39mgetImgUrl()\n\u001b[0;32m---> 11\u001b[0m     img_name \u001b[38;5;241m=\u001b[39m \u001b[43mprop\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgetName\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     13\u001b[0m     \u001b[38;5;66;03m# Send an HTTP GET request to the image URL\u001b[39;00m\n\u001b[1;32m     14\u001b[0m     response \u001b[38;5;241m=\u001b[39m requests\u001b[38;5;241m.\u001b[39mget(image_url)\n",
-      "Cell \u001b[0;32mIn[1092], line 88\u001b[0m, in \u001b[0;36mFaroesProperties.getName\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     86\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mgetName\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m     87\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39maddresses \u001b[38;5;241m!=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNone\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhouseNums \u001b[38;5;241m!=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNone\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m---> 88\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mstr\u001b[39m(\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcities\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43maddresses\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mhouseNums\u001b[49m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: can only concatenate str (not \"NoneType\") to str"
+      "Image saved as ToftirÓlavsvegur 6.jpeg\n",
+      "Image saved as unknown.jpeg\n",
+      "Image saved as TórshavnGripsvegur 33.jpeg\n",
+      "Image saved as TórshavnTróndargøta 55.jpeg\n",
+      "Image saved as HvalbaBíarvegur 107.jpeg\n",
+      "Image saved as TórshavnSílagøta íbúð 0.jpeg\n",
+      "Image saved as Norðskálimatr.nr. 12a.jpeg\n",
+      "Image saved as HoyvíkTorkilsgøta 7.jpeg\n",
+      "Image saved as TvøroyriSjógøta 178.jpeg\n",
+      "Image saved as TórshavnKongagøta 3.jpeg\n",
+      "Image saved as TórshavnHeiðastubbi 8.jpeg\n",
+      "Image saved as TórshavnHeiðastubbi 5.jpeg\n",
+      "Image saved as TórshavnSílagøta íbúð 0.jpeg\n",
+      "Image saved as TórshavnMeinhartstrøð 9.jpeg\n",
+      "Image saved as TórshavnØksnagerði 8.png\n",
+      "Image saved as SandavágurSteigartún 13.jpeg\n",
+      "Image saved as ArgirHeiðagøta 7A.jpeg\n",
+      "Image saved as TórshavnRyskigøta 34.jpeg\n",
+      "Image saved as TórshavnVesturgøta 22.jpeg\n",
+      "Image saved as TórshavnRyskigøta 41.jpeg\n"
      ]
     }
    ],
@@ -697,6 +704,8 @@
     "    # URL of the image\n",
     "    image_url = prop.getImgUrl()\n",
     "    img_name = prop.getName()\n",
+    "    if img_name == None:\n",
+    "        img_name = \"unknown\"\n",
     "\n",
     "    # Send an HTTP GET request to the image URL\n",
     "    response = requests.get(image_url)\n",
