--- a/husapris.ipynb
+++ b/husapris.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1108,
+   "execution_count": 1,
    "id": "4e2a16d3-08a3-479e-a580-bbb5ed4cb4ad",
    "metadata": {},
    "outputs": [],
@@ -13,12 +13,13 @@
     "import csv\n",
     "from datetime import datetime\n",
     "import os\n",
+    "import faroeseProps as fp\n",
     "\n",
     "from PIL import Image\n",
     "from io import BytesIO\n",
     "\n",
     "import time\n",
-    "# from selenium import webdriver\n",
+    "from selenium import webdriver\n",
     "from selenium.webdriver.common.keys import Keys\n",
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.chrome.options import Options\n",
@@ -28,110 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1124,
-   "id": "5c04c16a-745f-4f08-a282-c34acdd17555",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "class FaroesProperties:\n",
-    "    def __init__(self, website=None,\n",
-    "                 address=None, houseNum=None,\n",
-    "                 city=None, postNum=None,\n",
-    "                 price=None,LatesPrice=None, validDate=None,\n",
-    "                 date=None, buildingSize=None,\n",
-    "                 landSize=None, room=None, floor=None,\n",
-    "                 img=None):\n",
-    "        if website is None:\n",
-    "            self.websites = \"None\"\n",
-    "        self.websites = website\n",
-    "                     \n",
-    "        if address is None:\n",
-    "            self.addresses = \"None\"\n",
-    "        self.addresses = address\n",
-    "                     \n",
-    "        if houseNum is None:\n",
-    "            self.houseNums = \"None\"\n",
-    "        self.houseNums = houseNum\n",
-    "\n",
-    "        if city is None:\n",
-    "            self.cities = \"None\"\n",
-    "        self.cities = city\n",
-    "\n",
-    "        if postNum is None:\n",
-    "            self.postNums = \"None\"\n",
-    "        self.postNums = postNum\n",
-    "                     \n",
-    "        if prices is None:\n",
-    "            self.prices = \"None\"\n",
-    "        self.prices = price\n",
-    "                     \n",
-    "        if LatestPrices is None:\n",
-    "            self.LatestPrices = \"None\"\n",
-    "        self.LatestPrices = LatesPrice\n",
-    "                     \n",
-    "        if validDates is None:\n",
-    "            self.validDates = \"None\"\n",
-    "        self.validDates = validDate\n",
-    "                     \n",
-    "        if dates is None:\n",
-    "            self.dates = \"None\"\n",
-    "        self.dates = date\n",
-    "                     \n",
-    "        if buildingSizes is None:\n",
-    "            self.buildingSizes = \"None\"\n",
-    "        self.buildingSizes = buildingSize\n",
-    "                     \n",
-    "        if landSize is None:\n",
-    "            self.landSizes = \"None\"\n",
-    "        self.landSizes = landSize\n",
-    "                     \n",
-    "        if rooms is None:\n",
-    "            self.rooms = \"None\"\n",
-    "        self.rooms = room\n",
-    "                     \n",
-    "        if floors is None:\n",
-    "            self.floors = \"None\"\n",
-    "        self.floors = floor\n",
-    "\n",
-    "        if img is None:\n",
-    "            self.imgs = \"None\"\n",
-    "        self.imgs = img\n",
-    "                     \n",
-    "    def display(self):\n",
-    "        print(\"Heimasída: \", self.websites, \n",
-    "              \"\\nAddressa: \", self.addresses,\n",
-    "              \"\\nHúsnummar: \",self.houseNums,\n",
-    "              \"\\nPostnr: \", self.postNums,\n",
-    "              \"\\nBýur: \", self.cities,\n",
-    "              \"\\nPrísur: \", self.prices,\n",
-    "              \"\\nSeinasti bod: \",self.LatestPrices, \n",
-    "              \"\\nGaldandi til dato: \", self.validDates,\n",
-    "              \"\\nDato: \", self.dates,\n",
-    "              \"\\nm2 í húsinum: \", self.buildingSizes,\"\\nm2 á økinum: \", self.landSizes,\n",
-    "              \"\\nRúm: \", self.rooms,\n",
-    "              \"\\nHæddir: \", self.floors, \n",
-    "              \"\\nURL img \", self.imgs,\n",
-    "              \"\\n\")\n",
-    "    def writeToCSV(self):\n",
-    "        print(\"test\")\n",
-    "        \n",
-    "    def getImgUrl(self):\n",
-    "        if self.imgs != \"None\":\n",
-    "            return str(self.imgs)\n",
-    "    def getName(self):\n",
-    "        if self.addresses != None and self.houseNums != None and  self.cities != None:\n",
-    "            return str(self.cities+_+self.addresses+self.houseNums)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1125,
+   "execution_count": 2,
    "id": "726761f6-d73e-482e-94fd-541d65403571",
    "metadata": {
     "editable": true,
@@ -178,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1126,
+   "execution_count": 3,
    "id": "109631fb-3c06-4982-9db8-ec9156c500ec",
    "metadata": {
     "editable": true,
@@ -201,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1127,
+   "execution_count": 4,
    "id": "b6401455-0573-4f7b-9d80-34ac2fd438d4",
    "metadata": {},
    "outputs": [],
@@ -217,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1128,
+   "execution_count": 5,
    "id": "332a03a4-a8da-431d-a523-220ba7fed9a4",
    "metadata": {},
    "outputs": [],
@@ -245,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1129,
+   "execution_count": 6,
    "id": "a2799142-09e6-43c0-be7e-d258b724f577",
    "metadata": {},
    "outputs": [],
@@ -261,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1130,
+   "execution_count": 7,
    "id": "57fe8a8c-1a6c-46ac-aca3-4fb2a31581e5",
    "metadata": {},
    "outputs": [],
@@ -277,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1131,
+   "execution_count": 8,
    "id": "5b45f260-7897-401c-ab78-31c1ed07e8a2",
    "metadata": {},
    "outputs": [],
@@ -315,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1132,
+   "execution_count": 9,
    "id": "eb086590-919c-44f5-9ff1-41d4a8fa8ed8",
    "metadata": {},
    "outputs": [],
@@ -331,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1133,
+   "execution_count": 12,
    "id": "8c244913-5a8e-475b-b958-00d4cdd50aa4",
    "metadata": {
     "editable": true,
@@ -392,9 +290,17 @@
     "            image_url = img_element['src']\n",
     "            betriimgs.append(image_url)\n",
     "\n",
-    "    prop = FaroesProperties(websites, address, houseNum, city, postNum,\n",
-    "                            priceEntries,latestPriceOfferEntries, priceOfferValidDateEntry,yearBuiltEntry,insideM2Entry,\n",
-    "                            outsideM2Entry,roomEntry,floorEntry,image_url)\n",
+    "    prop = fp.FaroesProperties(website=websites, address=address, \n",
+    "                               houseNum=houseNum, city=city, \n",
+    "                               postNum=postNum, price=priceEntries,\n",
+    "                               LatestPrice=latestPriceOfferEntries, \n",
+    "                               validDate=priceOfferValidDateEntry,\n",
+    "                               date=yearBuiltEntry,\n",
+    "                               buildingSize=insideM2Entry,\n",
+    "                               landSize=outsideM2Entry,\n",
+    "                               room=roomEntry,\n",
+    "                               floor=floorEntry,\n",
+    "                               img=image_url)\n",
     "    \n",
     "    \n",
     "    properties.append(prop)\n"
@@ -402,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1134,
+   "execution_count": 13,
    "id": "ef673811-eb57-420d-b273-a4f640d19297",
    "metadata": {
     "editable": true,
@@ -430,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1135,
+   "execution_count": 14,
    "id": "646f7426-257a-4650-89d4-ffc3e1327a5f",
    "metadata": {},
    "outputs": [],
@@ -446,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1136,
+   "execution_count": 15,
    "id": "446ef0af-be4f-48e3-b7c6-f8114169c0f2",
    "metadata": {
     "editable": true,
@@ -472,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1137,
+   "execution_count": 16,
    "id": "6b3302cc-0378-469f-99e3-e74f0105f6ff",
    "metadata": {
     "editable": true,
@@ -530,9 +436,18 @@
     "            skynimgs.append(\"https://www.skyn.fo\"+image_url)\n",
     "        \n",
     "        \n",
-    "        prop = FaroesProperties(websites, address, houseNum, city, postNum,\n",
-    "                            priceEntries,latestPriceOfferEntries, priceOfferValidDateEntry,yearBuiltEntry,insideM2Entry,\n",
-    "                            outsideM2Entry,roomEntry,floorEntry,imgUrl)\n",
+    "        \n",
+    "        prop = fp.FaroesProperties(website=websites, address=address, \n",
+    "                                   houseNum=houseNum, city=city, \n",
+    "                                   postNum=postNum, price=priceEntries,\n",
+    "                                   LatestPrice=latestPriceOfferEntries, \n",
+    "                                   validDate=priceOfferValidDateEntry,\n",
+    "                                   date=yearBuiltEntry,\n",
+    "                                   buildingSize=insideM2Entry,\n",
+    "                                   landSize=outsideM2Entry,\n",
+    "                                   room=roomEntry,\n",
+    "                                   floor=floorEntry,\n",
+    "                                   img=imgUrl)\n",
     "\n",
     "        properties.append(prop)\n",
     "\n",
@@ -555,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1138,
+   "execution_count": 17,
    "id": "262e96ac-78f4-4c9d-8f68-7baedc96deba",
    "metadata": {
     "editable": true,
@@ -566,7 +481,8 @@
    },
    "outputs": [],
    "source": [
-    "file = open('export_data.csv', 'w', newline='')\n",
+    "datenow = datetime.today().strftime('%Y-%m-%d')\n",
+    "file = open(datenow+'_export_data.csv', 'w', newline='')\n",
     "writer = csv.writer(file)\n",
     "headers = ['website', \n",
     "           'address', \n",
@@ -585,7 +501,7 @@
     "          ]\n",
     "writer.writerow(headers)\n",
     "for prop in properties:\n",
-    "    file = open('export_data.csv', 'a', newline='', encoding='utf-8')\n",
+    "    file = open(datenow+'_export_data.csv', 'a', newline='', encoding='utf-8')\n",
     "    writer = csv.writer(file)\n",
     "    headers = ([prop.websites, \n",
     "                prop.addresses, \n",
