--- a/husapris.ipynb
+++ b/husapris.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "id": "4e2a16d3-08a3-479e-a580-bbb5ed4cb4ad",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 36,
    "id": "726761f6-d73e-482e-94fd-541d65403571",
    "metadata": {
     "editable": true,
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
    "id": "109631fb-3c06-4982-9db8-ec9156c500ec",
    "metadata": {
     "editable": true,
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "id": "b6401455-0573-4f7b-9d80-34ac2fd438d4",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 39,
    "id": "332a03a4-a8da-431d-a523-220ba7fed9a4",
    "metadata": {},
    "outputs": [],
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 40,
    "id": "a2799142-09e6-43c0-be7e-d258b724f577",
    "metadata": {},
    "outputs": [],
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 41,
    "id": "57fe8a8c-1a6c-46ac-aca3-4fb2a31581e5",
    "metadata": {},
    "outputs": [],
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 42,
    "id": "5b45f260-7897-401c-ab78-31c1ed07e8a2",
    "metadata": {},
    "outputs": [],
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 43,
    "id": "eb086590-919c-44f5-9ff1-41d4a8fa8ed8",
    "metadata": {},
    "outputs": [],
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 44,
    "id": "8c244913-5a8e-475b-b958-00d4cdd50aa4",
    "metadata": {
     "editable": true,
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 45,
    "id": "ef673811-eb57-420d-b273-a4f640d19297",
    "metadata": {
     "editable": true,
@@ -322,7 +322,7 @@
     "def addressParseSkyn(addresses):\n",
     "    if addresses:\n",
     "        pattern1 = r\"(\\w+[ ]?[^0-9]+[ ]?[^0-9]+)\"\n",
-    "        pattern2 = r\"([0-9]+\\w?)\"\n",
+    "        pattern2 = r\"([0-9]+[\\w|\\.]?[0-9]?)\"\n",
     "        match1 = re.search(pattern1, addresses)\n",
     "        match2 = re.search(pattern2, addresses)\n",
     "        if match1:\n",
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 46,
    "id": "646f7426-257a-4650-89d4-ffc3e1327a5f",
    "metadata": {},
    "outputs": [],
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 47,
    "id": "446ef0af-be4f-48e3-b7c6-f8114169c0f2",
    "metadata": {
     "editable": true,
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 48,
    "id": "6b3302cc-0378-469f-99e3-e74f0105f6ff",
    "metadata": {
     "editable": true,
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 49,
    "id": "262e96ac-78f4-4c9d-8f68-7baedc96deba",
    "metadata": {
     "editable": true,
