--- a/husapris.ipynb
+++ b/husapris.ipynb
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1141,
+   "execution_count": 51,
    "id": "34ac462f-0d95-4002-9cd4-4be753948064",
    "metadata": {
     "editable": true,
@@ -535,76 +535,14 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Image saved as TórshavnHeimaratún 3.jpeg\n",
-      "Image saved as VelbastaðurGerðisbreyt 3.jpeg\n",
-      "Image saved as TórshavnGrásteinsgøta 2B.jpeg\n",
-      "Image saved as FuglafjørðurKráarvegur 20.jpeg\n",
-      "Image saved as SørvágurLiðabrekkan 15.jpeg\n",
-      "Image saved as SandavágurSteigarbrekka 14.jpeg\n",
-      "Image saved as SkopunGarðavegur 12.jpeg\n",
-      "Image saved as TórshavnStoffalág 59.jpeg\n",
-      "Image saved as KlaksvíkGarðavegur 70.jpeg\n",
-      "Image saved as VágurBøgøta 30.jpeg\n",
-      "Image saved as HoyvíkKarlamagnusarbreyt 44.jpeg\n",
-      "Image saved as SaltangaráÆrgisbrekka 1.jpeg\n",
-      "Image saved as TórshavnNiels Winthersgøta 9.jpeg\n",
-      "Image saved as OyrarbakkiNeyst Matr nr 141.jpeg\n",
-      "Image saved as MiðvágurMatr nr 13d.jpeg\n",
-      "Image saved as VelbastaðurGrundstykki  176.jpeg\n",
-      "Image saved as SignabøurNeyst - matr. 283e.jpeg\n",
-      "Image saved as KlaksvíkGarðavegur 50.jpeg\n",
-      "Image saved as NorðragøtaÍbúð 1.jpeg\n",
-      "Image saved as ToftirLýðarsvegur 48B.jpeg\n",
-      "Image saved as NorðragøtaÍbúð 2.jpeg\n",
-      "Image saved as NorðragøtaÍbúð 3.jpeg\n",
-      "Image saved as NorðragøtaÍbúð 4.jpeg\n",
-      "Image saved as TórshavnUndir Ryggi 12.jpeg\n",
-      "Image saved as TórshavnLiljugøta 7.jpeg\n",
-      "Image saved as SkopunLeirvíksvegur 9.jpeg\n",
-      "Image saved as TórshavnLandavegur 61.jpeg\n",
-      "Image saved as Kollafjørðurí Homrum 25.jpeg\n",
-      "Image saved as TórshavnNiels Finsens gøta 23A.jpeg\n",
-      "Image saved as Kaldbakvið Krossá 6.jpeg\n",
-      "Image saved as SkipanesNiðari Vegur 78.jpeg\n",
-      "Image saved as Oyrarbakkimatr.nr. 58a.jpeg\n",
-      "Image saved as MykinesHandan Á 4.jpeg\n",
-      "Image saved as SkálavíkHagabrekka 28.jpeg\n",
-      "Image saved as VágurGeilin 33.jpeg\n",
-      "Image saved as Miðvágurmatr.nr. 208p.jpeg\n",
-      "Image saved as TórshavnHjaltarók 4.jpeg\n",
-      "Image saved as SandavágurOvastuhjallar 9.jpeg\n",
-      "Image saved as Tórshavnmatr.nr. 1350a.jpeg\n",
-      "Image saved as SyðrugøtaSalvarávegur 9.jpeg\n",
-      "Image saved as Ørðavíkmatr.nr. 31.jpeg\n",
-      "Image saved as KlaksvíkKlaksvíksvegur 59.jpeg\n",
-      "Image saved as Klaksvíkmatr. 144i.jpeg\n",
-      "Image saved as Nólsoymatr.nr. 159d.jpeg\n",
-      "Image saved as Leynarmatr.nr. 21f.jpeg\n",
-      "Image saved as Skálamatr.nr. 240a.jpeg\n",
-      "Image saved as KlaksvíkTraðagøta 37.jpeg\n",
-      "Image saved as ToftirÓlavsvegur 6.jpeg\n",
-      "Image saved as unknown.jpeg\n",
-      "Image saved as TórshavnGripsvegur 33.jpeg\n",
-      "Image saved as TórshavnTróndargøta 55.jpeg\n",
-      "Image saved as HvalbaBíarvegur 107.jpeg\n",
-      "Image saved as TórshavnSílagøta íbúð 0.jpeg\n",
-      "Image saved as Norðskálimatr.nr. 12a.jpeg\n",
-      "Image saved as HoyvíkTorkilsgøta 7.jpeg\n",
-      "Image saved as TvøroyriSjógøta 178.jpeg\n",
-      "Image saved as TórshavnKongagøta 3.jpeg\n",
-      "Image saved as TórshavnHeiðastubbi 8.jpeg\n",
-      "Image saved as TórshavnHeiðastubbi 5.jpeg\n",
-      "Image saved as TórshavnSílagøta íbúð 0.jpeg\n",
-      "Image saved as TórshavnMeinhartstrøð 9.jpeg\n",
-      "Image saved as TórshavnØksnagerði 8.png\n",
-      "Image saved as SandavágurSteigartún 13.jpeg\n",
-      "Image saved as ArgirHeiðagøta 7A.jpeg\n",
-      "Image saved as TórshavnRyskigøta 34.jpeg\n",
-      "Image saved as TórshavnVesturgøta 22.jpeg\n",
-      "Image saved as TórshavnRyskigøta 41.jpeg\n"
+     "ename": "AttributeError",
+     "evalue": "'FaroesProperties' object has no attribute 'getName'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[51], line 11\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m prop \u001b[38;5;129;01min\u001b[39;00m properties:\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;66;03m# URL of the image\u001b[39;00m\n\u001b[1;32m     10\u001b[0m     image_url \u001b[38;5;241m=\u001b[39m prop\u001b[38;5;241m.\u001b[39mgetImgUrl()\n\u001b[0;32m---> 11\u001b[0m     img_name \u001b[38;5;241m=\u001b[39m \u001b[43mprop\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgetName\u001b[49m()\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m img_name \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m     13\u001b[0m         img_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124munknown\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'FaroesProperties' object has no attribute 'getName'"
      ]
     }
    ],
