--- a/husapris.ipynb
+++ b/husapris.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "id": "4e2a16d3-08a3-479e-a580-bbb5ed4cb4ad",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "id": "726761f6-d73e-482e-94fd-541d65403571",
    "metadata": {
     "editable": true,
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "id": "109631fb-3c06-4982-9db8-ec9156c500ec",
    "metadata": {
     "editable": true,
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "id": "b6401455-0573-4f7b-9d80-34ac2fd438d4",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "id": "332a03a4-a8da-431d-a523-220ba7fed9a4",
    "metadata": {},
    "outputs": [],
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "id": "a2799142-09e6-43c0-be7e-d258b724f577",
    "metadata": {},
    "outputs": [],
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "id": "57fe8a8c-1a6c-46ac-aca3-4fb2a31581e5",
    "metadata": {},
    "outputs": [],
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 8,
    "id": "5b45f260-7897-401c-ab78-31c1ed07e8a2",
    "metadata": {},
    "outputs": [],
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 9,
    "id": "eb086590-919c-44f5-9ff1-41d4a8fa8ed8",
    "metadata": {},
    "outputs": [],
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 10,
    "id": "8c244913-5a8e-475b-b958-00d4cdd50aa4",
    "metadata": {
     "editable": true,
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
    "id": "ef673811-eb57-420d-b273-a4f640d19297",
    "metadata": {
     "editable": true,
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 12,
    "id": "646f7426-257a-4650-89d4-ffc3e1327a5f",
    "metadata": {},
    "outputs": [],
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 13,
    "id": "446ef0af-be4f-48e3-b7c6-f8114169c0f2",
    "metadata": {
     "editable": true,
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 14,
    "id": "6b3302cc-0378-469f-99e3-e74f0105f6ff",
    "metadata": {
     "editable": true,
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 15,
    "id": "262e96ac-78f4-4c9d-8f68-7baedc96deba",
    "metadata": {
     "editable": true,
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "id": "34ac462f-0d95-4002-9cd4-4be753948064",
    "metadata": {
     "editable": true,
@@ -535,14 +535,74 @@
    },
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'FaroesProperties' object has no attribute 'getName'",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image saved as Tórshavn_Vallalíð _13.jpeg\n",
+      "Image saved as Norðoyri_Flatnavegur _73B.jpeg\n",
+      "Image saved as Kollafjørður_Traðarvegur _5A.jpeg\n",
+      "Image saved as Fuglafjørður_Kráarvegur _20.jpeg\n",
+      "Image saved as Sandavágur_Steigarbrekka _14.jpeg\n",
+      "Image saved as Hoyvík_Karlamagnusarbreyt _40.jpeg\n",
+      "Image saved as Fuglafjørður_Ennivegur _66.jpeg\n",
+      "Image saved as Elduvík_Geilarvegur _5.jpeg\n",
+      "Image saved as Sørvágur_Liðabrekkan _15.jpeg\n",
+      "Image saved as Skopun_Garðavegur _12.jpeg\n",
+      "Image saved as Tórshavn_Stoffalág _59.jpeg\n",
+      "Image saved as Klaksvík_Garðavegur _70.jpeg\n",
+      "Image saved as Vágur_Bøgøta _30.jpeg\n",
+      "Image saved as Hoyvík_Karlamagnusarbreyt _44.jpeg\n",
+      "Image saved as Saltangará_Ærgisbrekka _1.jpeg\n",
+      "Image saved as Tórshavn_Niels Winthersgøta _9.jpeg\n",
+      "Image saved as Oyrarbakki_Neyst Matr nr _141.jpeg\n",
+      "Image saved as Miðvágur_Matr nr _13d.jpeg\n",
+      "Image saved as Velbastaður_Grundstykki  _176.jpeg\n",
+      "Image saved as Signabøur_Neyst - matr. _283e.jpeg\n",
+      "Image saved as Tórshavn_Meinhartstrøð _9.jpeg\n",
+      "Image saved as Sandavágur_Steigartún _13.jpeg\n",
+      "Image saved as Argir_Heiðagøta _7A.jpeg\n",
+      "Image saved as Norðragøta_Íbúð _1.jpeg\n",
+      "Image saved as Toftir_Lýðarsvegur _48B.jpeg\n",
+      "Image saved as Norðragøta_Íbúð _2.jpeg\n",
+      "Image saved as Norðragøta_Íbúð _3.jpeg\n",
+      "Image saved as Norðragøta_Íbúð _4.jpeg\n",
+      "Image saved as Tórshavn_Undir Ryggi _12.jpeg\n",
+      "Image saved as Tórshavn_Liljugøta _7.jpeg\n",
+      "Image saved as Skopun_Leirvíksvegur _9.jpeg\n",
+      "Image saved as Tórshavn_Landavegur _61.jpeg\n",
+      "Image saved as Kollafjørður_í Homrum _25.jpeg\n",
+      "Image saved as Tórshavn_Niels Finsens gøta _23A.jpeg\n",
+      "Image saved as Kaldbak_við Krossá _6.jpeg\n",
+      "Image saved as Skipanes_Niðari Vegur _78.jpeg\n",
+      "Image saved as Oyrarbakki_matr.nr. _58a.jpeg\n",
+      "Image saved as Mykines_Handan Á _4.jpeg\n",
+      "Image saved as Skálavík_Hagabrekka _28.jpeg\n",
+      "Image saved as Vágur_Geilin _33.jpeg\n",
+      "Image saved as Miðvágur_matr.nr. _208p.jpeg\n",
+      "Image saved as Tórshavn_Hjaltarók _4.jpeg\n",
+      "Image saved as Sandavágur_Ovastuhjallar _9.jpeg\n",
+      "Image saved as Tórshavn_matr.nr. _1350a.jpeg\n",
+      "Image saved as Syðrugøta_Salvarávegur _9.jpeg\n",
+      "Image saved as Ørðavík_matr.nr. _31.jpeg\n",
+      "Image saved as Klaksvík_Klaksvíksvegur _59.jpeg\n",
+      "Image saved as Klaksvík_matr. _144i.jpeg\n",
+      "Image saved as Nólsoy_matr.nr. _159d.jpeg\n",
+      "Image saved as Leynar_matr.nr. _21f.jpeg\n",
+      "Image saved as Skála_matr.nr. _240a.jpeg\n",
+      "Image saved as Klaksvík_Traðagøta _37.jpeg\n",
+      "Image saved as Toftir_Ólavsvegur _6.jpeg\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "can only concatenate str (not \"NoneType\") to str",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[51], line 11\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m prop \u001b[38;5;129;01min\u001b[39;00m properties:\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;66;03m# URL of the image\u001b[39;00m\n\u001b[1;32m     10\u001b[0m     image_url \u001b[38;5;241m=\u001b[39m prop\u001b[38;5;241m.\u001b[39mgetImgUrl()\n\u001b[0;32m---> 11\u001b[0m     img_name \u001b[38;5;241m=\u001b[39m \u001b[43mprop\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgetName\u001b[49m()\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m img_name \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m     13\u001b[0m         img_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124munknown\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'FaroesProperties' object has no attribute 'getName'"
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[16], line 11\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m prop \u001b[38;5;129;01min\u001b[39;00m properties:\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;66;03m# URL of the image\u001b[39;00m\n\u001b[1;32m     10\u001b[0m     image_url \u001b[38;5;241m=\u001b[39m prop\u001b[38;5;241m.\u001b[39mgetImgUrl()\n\u001b[0;32m---> 11\u001b[0m     img_name \u001b[38;5;241m=\u001b[39m \u001b[43mprop\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgetName\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m img_name \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m     13\u001b[0m         img_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124munknown\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "File \u001b[0;32m~/projects/husapris/faroeseProps.py:134\u001b[0m, in \u001b[0;36mFaroesProperties.getName\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    132\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mgetName\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m    133\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mimgs \u001b[38;5;241m!=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNone\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m--> 134\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mstr\u001b[39m(\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcities\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m_\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43maddresses\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m_\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mhouseNums\u001b[49m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: can only concatenate str (not \"NoneType\") to str"
      ]
     }
    ],
