--- a/husapris.ipynb
+++ b/husapris.ipynb
@@ -538,36 +538,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Image saved as Tórshavn_Vallalíð _13.jpeg\n",
-      "Image saved as Norðoyri_Flatnavegur _73B.jpeg\n",
-      "Image saved as Kollafjørður_Traðarvegur _5A.jpeg\n",
-      "Image saved as Fuglafjørður_Kráarvegur _20.jpeg\n",
-      "Image saved as Sandavágur_Steigarbrekka _14.jpeg\n",
-      "Image saved as Hoyvík_Karlamagnusarbreyt _40.jpeg\n",
-      "Image saved as Fuglafjørður_Ennivegur _66.jpeg\n",
-      "Image saved as Elduvík_Geilarvegur _5.jpeg\n",
-      "Image saved as Sørvágur_Liðabrekkan _15.jpeg\n",
-      "Image saved as Skopun_Garðavegur _12.jpeg\n",
-      "Image saved as Tórshavn_Stoffalág _59.jpeg\n",
-      "Image saved as Klaksvík_Garðavegur _70.jpeg\n",
-      "Image saved as Vágur_Bøgøta _30.jpeg\n",
-      "Image saved as Hoyvík_Karlamagnusarbreyt _44.jpeg\n",
-      "Image saved as Saltangará_Ærgisbrekka _1.jpeg\n",
       "Image saved as Tórshavn_Niels Winthersgøta _9.jpeg\n",
-      "Image saved as Oyrarbakki_Neyst Matr nr _141.jpeg\n",
-      "Image saved as Miðvágur_Matr nr _13d.jpeg\n",
-      "Image saved as Velbastaður_Grundstykki  _176.jpeg\n",
+      "Image saved as Tvøroyri_Við Sílá _9.jpeg\n",
+      "Image saved as Sandavágur_Á Merkrunum _1.jpeg\n",
       "Image saved as Signabøur_Neyst - matr. _283e.jpeg\n",
-      "Image saved as Tórshavn_Meinhartstrøð _9.jpeg\n",
+      "Image saved as Fuglafjørður_Kirkjuvegur _1.jpeg\n",
+      "Image saved as Velbastaður_Gerðisbreyt _30.jpeg\n",
+      "Image saved as Tórshavn_Øksnagerði _7.jpeg\n",
+      "Image saved as Tórshavn_Bøgøta _6.jpeg\n",
+      "Image saved as Oyrarbakki_við Hornaveg, Oyri  _400.jpeg\n",
+      "Image saved as Hoyvík_Karlamagnusarbreyt _40.jpeg\n",
+      "Image saved as Tórshavn_Dalavegur _8A.jpeg\n",
+      "Image saved as Klaksvík_Garðavegur _70.jpeg\n",
+      "Image saved as Tórshavn_Meinhartstrøð _10.jpeg\n",
+      "Image saved as Norðoyri_Flatnavegur _73B.jpeg\n",
+      "Image saved as Runavík_Blikagøta _7.jpeg\n",
+      "Image saved as Tórshavn_Bøgøta _3A.jpeg\n",
+      "Image saved as Syðrugøta_Gróvargøta _2.jpeg\n",
       "Image saved as Sandavágur_Steigartún _13.jpeg\n",
-      "Image saved as Argir_Heiðagøta _7A.jpeg\n",
+      "Image saved as Saltangará_Heiðavegur _26.jpeg\n",
+      "Image saved as Tórshavn_Kongagøta _1.jpeg\n",
+      "Image saved as Toftir_Lýðarsvegur _42.jpeg\n",
+      "Image saved as Tórshavn_Landavegur _94B.jpeg\n",
+      "Image saved as Tórshavn_Meinhartstrøð _9.jpeg\n",
+      "Image saved as Tórshavn_Ryskigøta _34.jpeg\n",
+      "Image saved as Tórshavn_Vesturgøta _24.jpeg\n",
       "Image saved as Norðragøta_Íbúð _1.jpeg\n",
       "Image saved as Toftir_Lýðarsvegur _48B.jpeg\n",
       "Image saved as Norðragøta_Íbúð _2.jpeg\n",
       "Image saved as Norðragøta_Íbúð _3.jpeg\n",
       "Image saved as Norðragøta_Íbúð _4.jpeg\n",
       "Image saved as Tórshavn_Undir Ryggi _12.jpeg\n",
-      "Image saved as Tórshavn_Liljugøta _7.jpeg\n",
       "Image saved as Skopun_Leirvíksvegur _9.jpeg\n",
       "Image saved as Tórshavn_Landavegur _61.jpeg\n",
       "Image saved as Kollafjørður_í Homrum _25.jpeg\n",
@@ -575,7 +576,6 @@
       "Image saved as Kaldbak_við Krossá _6.jpeg\n",
       "Image saved as Skipanes_Niðari Vegur _78.jpeg\n",
       "Image saved as Oyrarbakki_matr.nr. _58a.jpeg\n",
-      "Image saved as Mykines_Handan Á _4.jpeg\n",
       "Image saved as Skálavík_Hagabrekka _28.jpeg\n",
       "Image saved as Vágur_Geilin _33.jpeg\n",
       "Image saved as Miðvágur_matr.nr. _208p.jpeg\n",
@@ -584,7 +584,6 @@
       "Image saved as Tórshavn_matr.nr. _1350a.jpeg\n",
       "Image saved as Syðrugøta_Salvarávegur _9.jpeg\n",
       "Image saved as Ørðavík_matr.nr. _31.jpeg\n",
-      "Image saved as Klaksvík_Klaksvíksvegur _59.jpeg\n",
       "Image saved as Klaksvík_matr. _144i.jpeg\n",
       "Image saved as Nólsoy_matr.nr. _159d.jpeg\n",
       "Image saved as Leynar_matr.nr. _21f.jpeg\n",
